--- a/backend/package.json
+++ b/backend/package.json
@@ -11,17 +11,32 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@google-cloud/speech": "^6.7.1",
+    "@google-cloud/vertexai": "^1.9.3",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.10",
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@google-cloud/aiplatform": "^3.35.0",
+    "@google-cloud/text-to-speech": "^5.8.1",
+    "@google/generative-ai": "^0.24.0",
+    "@xenova/transformers": "^2.17.2",
+    "axios": "^1.8.3",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs-extra": "^11.3.0",
+    "multer": "^1.4.5-lts.1",
+    "node-pre-gyp": "^0.17.0",
+    "node-whisper": "^2024.11.13",
     "nodemon": "^3.1.9",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^11.1.0"
   }
 }
